# QT_REPO

./: .gitignore
Core_Qt_Modules/: CMakeLists.txt  main.cpp
Data_Base/08_PreDataBase/: CMakeLists.txt  database.cpp  database.h  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Drawing_graphs/PreGraphic/: CMakeLists.txt  graphic.cpp  graphic.h  graphic.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Introduction_to_QT/: CMakeLists.txt  main.cpp
Q_Widget/build-Q_Widget-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
Q_Widget/build-Q_Widget-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-29545facdafba9ad73f7.json  (+4 more)
Q_Widget/build-Q_Widget-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-1c583077d360945adcd0.json  cmakeFiles-v1-bbb5c0fed5143ecce2c9.json  codemodel-v2-23623170261097108051.json  directory-.-Debug-605f182d62adc9891f3d.json  index-2023-04-30T09-46-37-0354.json  target-Q_Widget-Debug-dbf9d793a48f518657d4.json
Q_Widget/build-Q_Widget-Desktop-Debug/.qt/: QtDeploySupport.cmake
Q_Widget/build-Q_Widget-Desktop-Debug/.qtc_clangd/: compile_commands.json
Q_Widget/build-Q_Widget-Desktop-Debug/Q_Widget_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Q_Widget/build-Q_Widget-Desktop-Debug/Q_Widget_autogen/include/: ui_mainwindow.h
Qt_Concurrent/: CMakeLists.txt  mainwindow.cpp
Qt_Designer/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_Widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Slots_and_signals/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
TCP_client/: mainwindow.cpp  mainwindow.h  structs.h  tcpclient.cpp
UDP_Client/PreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
UDP_Client/build-PreUDPsocket-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
UDP_Client/build-PreUDPsocket-Desktop-Debug/.qt/: QtDeploySupport.cmake
UDP_Client/build-PreUDPsocket-Desktop-Debug/.qtc_clangd/: compile_commands.json
UDP_Client/build-PreUDPsocket-Desktop-Debug/PreUDPsocket_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_udpworker.cpp  moc_udpworker.cpp.d
UDP_Client/build-PreUDPsocket-Desktop-Debug/PreUDPsocket_autogen/include/: ui_mainwindow.h
(+50 files in other folders)
